# agentwatch

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEBASE.md  CONTRIBUTING.md  FUTURE_UI.md  GITHUB_SETUP_GUIDE.md  README.md  WEAKNESSES.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
agentwatch/: __init__.py  cli.py  crewai.py  models.py  monitor.py
agentwatch/alerts/: __init__.py
agentwatch/baseline/: __init__.py
agentwatch/detectors/: __init__.py  action_loop.py  base.py  goal_drift.py  resource_spike.py
agentwatch/integrations/: __init__.py  _watch.py  dspy.py  langchain.py  openai.py
agentwatch/storage/: __init__.py
tests/: test_standalone.py
