[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentwatch"
version = "0.1.0"
description = "Real-time behavioural drift detection for agentic AI systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Tanmay Sharma"}
]
keywords = ["ai", "agents", "monitoring", "drift-detection", "langchain", "openai", "dspy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "click>=8.1.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
langchain = ["langchain>=0.1.0", "langchain-core>=0.1.0"]
dspy = ["dspy-ai>=2.0.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1.0"]
all = ["openai>=1.0.0", "langchain>=0.1.0", "langchain-core>=0.1.0", "dspy-ai>=2.0.0"]

[project.scripts]
agentwatch = "agentwatch.cli:cli"

[project.urls]
Homepage = "https://github.com/tanmaysharma/agentwatch"
Issues = "https://github.com/tanmaysharma/agentwatch/issues"

[tool.setuptools.packages.find]
include = ["agentwatch*"]

[tool.ruff]
line-length = 100
target-version = "py310"
